--- a/04.01-206-breakpoints-starter/css/main.css
+++ b/04.01-206-breakpoints-starter/css/main.css
@@ -1,13 +1,13 @@
 
 /* ----------- Tablets larger than 768px wide ----------- */
-@media (min-width 768px) {
+@media (min-width: 768px) {
 	body {
     background: red;
   }
 }
 
 /* ----------- Monitors larger than 1200px wide ----------- */
-@media (min-width 1200px) {
+@media (min-width: 1200px) {
   body {
     background:  #0066ff;
   }
